--- a/mcapsBath.yml
+++ b/mcapsBath.yml
@@ -4608,44 +4608,6 @@
       - UPA:
         - UPC06754
   - !!omap
-    - id: MNXM18_bm
-    - name: glutamate(1-)
-    - compartment: bm
-    - charge: -1
-    - formula: C5H8NO4
-    - notes: !!omap
-      - CHEBI:
-        - 14321, 18237, 24314, 5431, 29987, 64220
-      - INCHI:
-        - InChI=1S/C5H9NO4/c6-3(5(9)10)1-2-4(7)8/h3H,1-2,6H2,(H,7,8)(H,9,10)/p-1
-      - KEGG:
-        - C00302, D04341
-      - METACYC:
-        - Glutamates
-      - MXNREF:
-        - MNXM18
-      - SMILES:
-        - '[NH3+]C(CCC([O-])=O)C([O-])=O'
-  - !!omap
-    - id: MNXM18_c
-    - name: glutamate(1-)
-    - compartment: c
-    - charge: -1
-    - formula: C5H8NO4
-    - notes: !!omap
-      - CHEBI:
-        - 14321, 18237, 24314, 5431, 29987, 64220
-      - INCHI:
-        - InChI=1S/C5H9NO4/c6-3(5(9)10)1-2-4(7)8/h3H,1-2,6H2,(H,7,8)(H,9,10)/p-1
-      - KEGG:
-        - C00302, D04341
-      - METACYC:
-        - Glutamates
-      - MXNREF:
-        - MNXM18
-      - SMILES:
-        - '[NH3+]C(CCC([O-])=O)C([O-])=O'
-  - !!omap
     - id: MNXM19093_c
     - name: Lipoyl-[acp]
     - compartment: c
@@ -15576,6 +15538,25 @@
         - cpd00186
       - SMILES:
         - '[NH3+][C@H](CCC([O-])=O)C([O-])=O'
+  - !!omap
+    - id: glu__L_bm
+    - name: glutamate(1-)
+    - compartment: bm
+    - charge: -1
+    - formula: C5H8NO4
+    - notes: !!omap
+      - CHEBI:
+        - 14321, 18237, 24314, 5431, 29987, 64220
+      - INCHI:
+        - InChI=1S/C5H9NO4/c6-3(5(9)10)1-2-4(7)8/h3H,1-2,6H2,(H,7,8)(H,9,10)/p-1
+      - KEGG:
+        - C00302, D04341
+      - METACYC:
+        - Glutamates
+      - MXNREF:
+        - MNXM18
+      - SMILES:
+        - '[NH3+]C(CCC([O-])=O)C([O-])=O'
   - !!omap
     - id: glu__L_c
     - name: L-glutamate
@@ -29941,7 +29922,7 @@
       - SEED:
         - rxn00849
   - !!omap
-    - id: ALATA__L_c
+    - id: ALATA_L_c
     - name: 1 pyruvate + 1 L-glutamate = 1 2-oxoglutarate + 1 L-alanine zwitterion
     - metabolites: !!omap
       - akg_c: 1.0
@@ -31630,7 +31611,6 @@
     - id: BIOMASS_REACTION
     - name: BIOMASS_REACTION
     - metabolites: !!omap
-      - MNXM18_bm: -1.0
       - adp_bm: 1.0
       - ala__L_bm: -1.0
       - amp_bm: -1.0
@@ -31645,6 +31625,7 @@
       - dgmp_bm: -1.0
       - dtmp_bm: -1.0
       - gln__L_bm: -1.0
+      - glu__L_bm: -1.0
       - gly_bm: -1.0
       - glycogen_bm: -1.0
       - gmp_bm: -1.0
@@ -41274,29 +41255,6 @@
       - GENE ASSOCIATION:
         - ''
   - !!omap
-    - id: MNXM18_bm
-    - name: glutamate(1-) (biomass precursor)
-    - metabolites: !!omap
-      - MNXM18_bm: 1.0
-      - MNXM18_c: -1.0
-    - lower_bound: -1000.0
-    - upper_bound: 1000.0
-    - gene_reaction_rule: ''
-    - notes: !!omap
-      - GENE ASSOCIATION:
-        - ''
-  - !!omap
-    - id: MNXM18_out
-    - name: glutamate(1-) (out)
-    - metabolites: !!omap
-      - MNXM18_c: -1.0
-    - lower_bound: 0.0
-    - upper_bound: 1000.0
-    - gene_reaction_rule: ''
-    - notes: !!omap
-      - GENE ASSOCIATION:
-        - ''
-  - !!omap
     - id: MNXM19093_out
     - name: Lipoyl-[acp] (out)
     - metabolites: !!omap
@@ -43199,9 +43157,9 @@
     - name: 1 2-oxoglutarate + 1 L-cysteine zwitterion = 1 3-mercaptopyruvate + 1
         glutamate(1-)
     - metabolites: !!omap
-      - MNXM18_c: 1.0
       - akg_c: -1.0
       - cys__L_c: -1.0
+      - glu__L_c: 1.0
       - mercppyr_c: 1.0
     - lower_bound: -1000.0
     - upper_bound: 1000.0
@@ -45999,8 +45957,8 @@
     - id: MNXR59296_c
     - name: 2 H2O + 1 gamma-Amino-gamma-cyanobutanoate = 1 NH4(+) + 1 glutamate(1-)
     - metabolites: !!omap
-      - MNXM18_c: 1.0
       - acybut_c: -1.0
+      - glu__L_c: 1.0
       - h2o_c: -2.0
       - nh3_c: 1.0
     - lower_bound: 0.0
@@ -62269,6 +62227,18 @@
     - metabolites: !!omap
       - glu__L_c: -1.0
     - lower_bound: 0.0
+    - upper_bound: 1000.0
+    - gene_reaction_rule: ''
+    - notes: !!omap
+      - GENE ASSOCIATION:
+        - ''
+  - !!omap
+    - id: glu__L_bm
+    - name: glutamate(1-) (biomass precursor)
+    - metabolites: !!omap
+      - glu__L_bm: 1.0
+      - glu__L_c: -1.0
+    - lower_bound: -1000.0
     - upper_bound: 1000.0
     - gene_reaction_rule: ''
     - notes: !!omap
